@@ -17,181 +17,121 @@
  *  under the License.
  */
 
+import org.asciidoctor.gradle.jvm.AsciidoctorTask
+
+buildscript {
+    apply from: rootProject.layout.projectDirectory.file('dependencies.gradle')
+}
+
+plugins {
+    id 'groovy'
+    id 'org.asciidoctor.jvm.convert'
+}
+
+version = projectVersion
+
 ext {
-    datastoreGithubBranch = "8.0.x"
-    checkOutDir = "build/checkout"
-    explicitGormSrc = System.getProperty("gorm.src") ?: (project.hasProperty('gorm.src') ? project.getProperty("gorm.src") : null)
-    gormSrc = explicitGormSrc ? file(explicitGormSrc).absolutePath : "$checkOutDir/gorm-src"
-    zipFile = "build/source.zip"
-
-    coreProjects = [
-            'core',
-            'gorm'
-    ]
-
+    coreProjects = ['grails-datastore-core', 'grails-datamapping-core']
 }
 
-version rootProject.version
-
-apply plugin: 'groovy'
-apply plugin: 'org.asciidoctor.jvm.convert'
-
-configurations {
-    documentation {
-        canBeConsumed = false
-        canBeResolved = true
-        attributes {
-            attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.LIBRARY))
-            attribute(Bundling.BUNDLING_ATTRIBUTE, objects.named(Bundling, Bundling.EXTERNAL))
-            attribute(Usage.USAGE_ATTRIBUTE, objects.named(Usage, Usage.JAVA_RUNTIME))
-        }
-    }
-}
+apply plugin: 'org.apache.grails.buildsrc.groovydoc'
 
 dependencies {
-    documentation "org.apache.groovy:groovy"
-    documentation "org.apache.groovy:groovy-templates"
-    documentation "org.apache.groovy:groovy-dateutil"
-    documentation "com.github.javaparser:javaparser-core:$javaParserCoreVersion"
-    for (p in coreProjects) {
-        documentation "org.apache.grails:grails-datastore-$p:$datastoreVersion"
+    documentation platform(project(':grails-neo4j-bom'))
+    documentation 'org.apache.groovy:groovy'
+    documentation 'org.apache.groovy:groovy-ant'
+    documentation 'org.apache.groovy:groovy-groovydoc'
+    documentation 'org.apache.groovy:groovy-templates'
+    documentation 'org.apache.groovy:groovy-dateutil'
+    documentation 'com.github.javaparser:javaparser-core'
+    coreProjects.each {
+        documentation "org.apache.grails.data:$it"
     }
-    project.rootProject.subprojects.each { subproject ->
-        if (subproject.name != "docs" && !subproject.name.startsWith('examples')) {
-            documentation project(":$subproject.name")
-        }
+    rootProject.subprojects
+            .findAll { it.findProperty('gormApiDocs') }
+            .each {
+                // TODO: This needs fixed for hibernate 7, but with the hibernate version conflicts, we may need to do separate documentation publishing
+                if (!it.name.startsWith('grails-data-hibernate7')) {
+                    documentation project(":$it.name")
+                }
+            }
+}
+
+tasks.named('asciidoctor', AsciidoctorTask) { AsciidoctorTask it ->
+    it.inputs.dir(project.layout.projectDirectory.dir('src/docs/asciidoc')).withPropertyName('docsSrcDir').withPathSensitivity(PathSensitivity.RELATIVE)
+    it.outputs.dir layout.buildDirectory.dir('asciidoc/manual')
+
+    it.jvm {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
     }
+    it.baseDirFollowsSourceFile()
+    it.sourceDir layout.projectDirectory.dir('src/docs/asciidoc')
+    it.outputDir = layout.buildDirectory.dir('asciidoc/manual')
+    it.attributes = [
+            'experimental' : 'true',
+            'compat-mode'  : 'true',
+            'toc'          : 'left',
+            'icons'        : 'font',
+            'reproducible' : '',
+            'version'      : projectVersion,
+            'pluginVersion': projectVersion,
+            'neo4jVersion' : combinedVersions['neo4j-harness.version'],
+            'exampledir'   : rootProject.findProject(':grails-test-examples-neo4j-base').layout.projectDirectory.asFile.absolutePath,
+            'testsdir'     : rootProject.findProject(':grails-data-neo4j-core').layout.projectDirectory.dir('src/test/groovy').asFile.absolutePath
+    ]
 }
 
-asciidoctor {
-    baseDirFollowsSourceDir()
-    resources {
-        from("${project.projectDir}/src/docs/images")
-        into "${project.projectDir}/images"
+tasks.withType(Groovydoc).configureEach { Groovydoc groovydoc ->
+    groovydoc.dependsOn(rootProject.subprojects
+            .findAll { it.findProperty('gormApiDocs') }
+            .collect { ":${it.name}:groovydoc" })
+    groovydoc.docTitle = "GORM for Neo4j - $project.version"
+    groovydoc.includeAuthor = true
+
+    def sourceFiles = coreProjects.collect {
+        layout.projectDirectory.files("$it/src/main/groovy")
+    }.sum()
+
+    rootProject.subprojects
+            .findAll { it.findProperty('gormApiDocs') }
+            .each { sourceFiles += it.files('src/main/groovy') }
+
+    groovydoc.source = sourceFiles
+    groovydoc.destinationDir = layout.buildDirectory.dir('combined-api/api').get().asFile
+    groovydoc.classpath = configurations.documentation
+
+    List<File> groovydocSrcDirs = coreProjects.collect {
+        layout.projectDirectory.dir("$it/src/main/groovy").asFile
     }
-
-    attributes 'experimental': 'true',
-            'compat-mode': 'true',
-            'toc': 'left',
-            'icons': 'font',
-            'reproducible': '',
-            'version': project.version,
-            'pluginVersion': project.version,
-            'neo4jVersion': neo4jVersion,
-            'sourcedir': "${project.rootProject.projectDir}/grails-datastore-gorm-neo4j/src/main/groovy",
-            'exampledir': "${project.rootProject.projectDir}/examples/grails3-neo4j",
-            'testsdir': "${project.rootProject.projectDir}/grails-datastore-gorm-neo4j/src/test/groovy"
+    rootProject.subprojects
+            .findAll { sp -> sp.findProperty('gormApiDocs') }
+            .each { sp -> groovydocSrcDirs << new File(sp.projectDir, 'src/main/groovy') }
+    groovydoc.ext.groovydocSourceDirs = groovydocSrcDirs
 }
 
-task fetchSource {
+tasks.register('docs', Sync).configure { Sync docTask ->
+    docTask.group = 'documentation'
+    docTask.dependsOn('asciidoctor', 'groovydoc')
 
-    outputs.dir layout.buildDirectory.dir('checkout')
-    inputs.properties(branch: datastoreGithubBranch)
+    def apiDir = layout.buildDirectory.dir('combined-api')
+    def resourceDir = layout.projectDirectory.dir('src/docs/resources')
+    def guideDir = layout.buildDirectory.dir('asciidoc')
 
-    onlyIf {
-        println "GORM SRC=$explicitGormSrc"
-        return !explicitGormSrc
-    }
+    docTask.from apiDir, resourceDir, guideDir
+    docTask.into layout.buildDirectory.dir('docs')
 
-    doLast {
-        ant.mkdir dir: project.buildDir
-        ant.mkdir dir: checkOutDir
-
-        println "Downloading GORM source code."
-        if (isReleaseVersion) {
-            ant.get src: "https://github.com/grails/grails-data-mapping/archive/refs/tags/v${datastoreVersion}.zip", dest: zipFile, verbose: true
-        } else {
-            ant.get src: "https://github.com/grails/grails-data-mapping/archive/refs/heads/${datastoreGithubBranch}.zip", dest: zipFile, verbose: true
-        }
-
-        ant.unzip src: zipFile, dest: checkOutDir, {
-            mapper type: "regexp", from: "(grails-\\S*?/)(.*)", to: "gorm-src/\\2"
-        }
-
-        println "GORM source code downloaded."
-    }
+    docTask.finalizedBy('assembleDocsDist')
 }
 
-task copyDocs(type: Copy) {
-    dependsOn('asciidoctor', 'copyResources')
-    mustRunAfter 'asciidoctor'
-    finalizedBy 'cleanAsciidoc'
-    from project(':docs').layout.buildDirectory.dir('docs/asciidoc')
-    into project(':docs').layout.buildDirectory.dir('docs/manual')
+tasks.register('assembleDocsDist', Zip).configure { Zip it ->
+    it.dependsOn('docs')
+    it.from(layout.buildDirectory.dir('docs'))
+    it.archiveFileName = "${project.name}-${project.version}.zip"
+    it.destinationDirectory = project.layout.buildDirectory.dir('distributions')
 }
 
-task cleanAsciidoc(type: Delete, dependsOn: copyDocs) {
-    dependsOn 'copyDocs'
-    delete project(':docs').layout.buildDirectory.dir('docs/asciidoc')
+// the groovy plugin is applied to this project, but we do not build a jar file since
+// the dependencies are only used for resolving versions from the bom
+tasks.withType(Jar).configureEach {
+    enabled = false
 }
-
-tasks.withType(Groovydoc) {
-    dependsOn(fetchSource)
-    docTitle = "GORM for Neo4j - ${project.version}"
-    footer = '''<!-- Matomo -->
-<script>
-    var _paq = window._paq = window._paq || [];
-    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-    _paq.push(["setDoNotTrack", true]);
-    _paq.push(["disableCookies"]);
-    _paq.push(['trackPageView']);
-    _paq.push(['enableLinkTracking']);
-    (function() {
-        var u="https://analytics.apache.org/";
-        _paq.push(['setTrackerUrl', u+'matomo.php']);
-        _paq.push(['setSiteId', '79']);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-        g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-    })();
-</script>
-<!-- End Matomo Code -->'''
-    destinationDir = project.file("build/docs/api")
-
-    def files
-    for (p in coreProjects) {
-        if (files == null) {
-            files = project.files("${checkOutDir}/gorm-src/grails-datastore-${p}/src/main/groovy")
-        } else {
-            files += project.files("${checkOutDir}/gorm-src/grails-datastore-${p}/src/main/groovy")
-        }
-    }
-    project.rootProject.subprojects.each { subproject ->
-        if (subproject.name.startsWith('examples')) return
-        if (subproject.file('src/main/groovy').exists()) {
-            files += subproject.files("src/main/groovy")
-        }
-    }
-    source = files
-    classpath = configurations.documentation
-}
-
-tasks.withType(org.gradle.api.tasks.javadoc.Groovydoc) {
-    configure {
-        access = GroovydocAccess.PRIVATE
-        processScripts = false
-        includeMainForScripts = false
-        includeAuthor = true
-        groovyClasspath += configurations.documentation
-    }
-}
-
-task copyResources(type: Copy) {
-    from project(':docs').layout.projectDirectory.dir('src/docs/resources')
-    into project(':docs').layout.buildDirectory.dir('docs')
-}
-
-task docs(dependsOn: [asciidoctor, groovydoc, copyDocs, copyResources] +
-        subprojects.findAll { project -> project.tasks.findByName('groovydoc') }
-                .collect { project -> project.tasks.groovydoc }
-)
-
-task assembleDocsDist(type: Zip) {
-    dependsOn 'docs', 'copyDocs'
-    from "${project.buildDir}/docs"
-    include '*'
-    include '*/**'
-    archiveFileName = "${project.name}-${project.version}.zip"
-    destinationDirectory = project.layout.buildDirectory.dir('distributions')
-}
-
-docs.finalizedBy assembleDocsDist
